--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,21 @@
 {
   "compilerOptions": {
-    "target": "es6", 
-    "module": "commonjs",
-    "rootDir": "./src",
+    "target": "ES2020",
+    "module": "ESNext",
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
-    "sourceMap": true
+    "allowJs": true,
+    "checkJs": true,
+    "noEmit": false,
+    "skipLibCheck": true
   },
-  "include": ["src"]
+  "include": [
+    "*.ts",
+    "*.js"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
