--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "lite-server",
     "build": "tsc",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "lint:js": "eslint . --ext .js,.ts"
   },
   "eslintConfig": {
     "extends": [
