--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,5 @@
     "*.ts",
     "*.js"
   ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+ "exclude": ["node_modules", "dist", "eslint.config.js"]
 }
