--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
-    "outDir": "./dist",
+    "outDir": "build",
     "strict": true,
     "esModuleInterop": true,
     "allowJs": true,
